{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 20,
  "lineage": "f5ff5be0-c9c6-f20d-28f5-fabacb2a217f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04aa4b6c5aeec7675",
            "arn": "arn:aws:ec2:ap-south-1:583372807868:elastic-ip/eipalloc-04aa4b6c5aeec7675",
            "domain": "vpc",
            "id": "eipalloc-04aa4b6c5aeec7675",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-35-154-28-131.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.28.131",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "eipalloc-04aa4b6c5aeec7675",
            "region": "ap-south-1"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0814d1bb9f4186161",
            "arn": "arn:aws:ec2:ap-south-1:583372807868:elastic-ip/eipalloc-0814d1bb9f4186161",
            "domain": "vpc",
            "id": "eipalloc-0814d1bb9f4186161",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-205-76-252.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.205.76.252",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "eipalloc-0814d1bb9f4186161",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:583372807868:internet-gateway/igw-07c2d90fd73003791",
            "id": "igw-07c2d90fd73003791",
            "owner_id": "583372807868",
            "region": "ap-south-1",
            "vpc_id": "vpc-02dc74c0b69bc2d1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "igw-07c2d90fd73003791",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04aa4b6c5aeec7675",
            "association_id": "eipassoc-0702d027f6579bbc5",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0354e78ee1cc86626",
            "network_interface_id": "eni-0185fa476f7f360d2",
            "private_ip": "10.0.1.146",
            "public_ip": "35.154.28.131",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0feabb4c00f5c85bb",
            "vpc_id": "vpc-02dc74c0b69bc2d1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "nat-0354e78ee1cc86626",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0814d1bb9f4186161",
            "association_id": "eipassoc-067c1ad86840d582f",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-08bf24a2aa239f103",
            "network_interface_id": "eni-0799c4731f783b21f",
            "private_ip": "10.0.2.78",
            "public_ip": "13.205.76.252",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ab3fc8e879a05ab6",
            "vpc_id": "vpc-02dc74c0b69bc2d1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "nat-08bf24a2aa239f103",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07c2d90fd73003791",
            "id": "r-rtb-0a1a51ed2791bf56f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a1a51ed2791bf56f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0a1a51ed2791bf56f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e693b334a075a60b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0354e78ee1cc86626",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e693b334a075a60b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0e693b334a075a60b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a9cf33e5fa6675ac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08bf24a2aa239f103",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a9cf33e5fa6675ac",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0a9cf33e5fa6675ac"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:583372807868:route-table/rtb-0e693b334a075a60b",
            "id": "rtb-0e693b334a075a60b",
            "owner_id": "583372807868",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02dc74c0b69bc2d1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "rtb-0e693b334a075a60b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:583372807868:route-table/rtb-0a9cf33e5fa6675ac",
            "id": "rtb-0a9cf33e5fa6675ac",
            "owner_id": "583372807868",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02dc74c0b69bc2d1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "rtb-0a9cf33e5fa6675ac",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:583372807868:route-table/rtb-0a1a51ed2791bf56f",
            "id": "rtb-0a1a51ed2791bf56f",
            "owner_id": "583372807868",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02dc74c0b69bc2d1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "rtb-0a1a51ed2791bf56f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ead9833f113d04a",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e693b334a075a60b",
            "subnet_id": "subnet-0e0436d4cfc16a58d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "rtbassoc-09ead9833f113d04a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef20667d75fdea00",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a9cf33e5fa6675ac",
            "subnet_id": "subnet-09f93132f77d91aff"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "rtbassoc-0ef20667d75fdea00",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045816fe93399083d",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a1a51ed2791bf56f",
            "subnet_id": "subnet-0feabb4c00f5c85bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "rtbassoc-045816fe93399083d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c4211030d4ba23b",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a1a51ed2791bf56f",
            "subnet_id": "subnet-0ab3fc8e879a05ab6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "rtbassoc-00c4211030d4ba23b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:583372807868:subnet/subnet-0e0436d4cfc16a58d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0436d4cfc16a58d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "583372807868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private-0"
            },
            "tags_all": {
              "Name": "private-0"
            },
            "vpc_id": "vpc-02dc74c0b69bc2d1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "subnet-0e0436d4cfc16a58d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:583372807868:subnet/subnet-09f93132f77d91aff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f93132f77d91aff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "583372807868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-02dc74c0b69bc2d1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "subnet-09f93132f77d91aff",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:583372807868:subnet/subnet-0feabb4c00f5c85bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0feabb4c00f5c85bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "583372807868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-0"
            },
            "tags_all": {
              "Name": "public-0"
            },
            "vpc_id": "vpc-02dc74c0b69bc2d1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "subnet-0feabb4c00f5c85bb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:583372807868:subnet/subnet-0ab3fc8e879a05ab6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab3fc8e879a05ab6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "583372807868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-02dc74c0b69bc2d1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "subnet-0ab3fc8e879a05ab6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:583372807868:vpc/vpc-02dc74c0b69bc2d1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02366e55f1cfeb188",
            "default_route_table_id": "rtb-02fb88358094b4503",
            "default_security_group_id": "sg-0357b59085753dc02",
            "dhcp_options_id": "dopt-00d8aa410377e9094",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02dc74c0b69bc2d1e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02fb88358094b4503",
            "owner_id": "583372807868",
            "region": "ap-south-1",
            "tags": {
              "Name": "multi-az-vpc"
            },
            "tags_all": {
              "Name": "multi-az-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "583372807868",
            "id": "vpc-02dc74c0b69bc2d1e",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}